welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: not found: value len
	for (pas <- 0 to (len(nums)-1))
                          ^